# binabook

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
results/: btreemap.md  price_idx_vec.md
src/: depth_update.rs  main.rs  orderbook.rs  snapshot.rs  types.rs
