[package]
name = "binabook"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.32"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
reqwest = { version = "0.13", features = ["json", "native-tls", "gzip"] }
